# mini-payment-gateway

./: .env.example  .env.github.local.example  .env.sandbox.example  .gitignore  README.md  docker-compose.sandbox.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.phase10.local.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/demo_merchant/: __init__.py  config.py  gateway_client.py  main.py  security.py  store.py
backend/scripts/: reset_e2e_demo.py  seed_dashboard_demo.py  smoke_e2e_demo.py  smoke_ops_reconciliation_api.py  smoke_payment_api.py  smoke_provider_callback_api.py  smoke_refund_api.py  smoke_verify_db.py  smoke_webhook_api.py
backend/tests/: demo_merchant_ui.test.mjs  internal_auth_test_utils.py  merchant_portal_test_utils.py  test_app_foundation.py  test_audit_service.py  test_auth_service.py  test_demo_merchant_app.py  test_demo_merchant_config.py  test_demo_merchant_gateway_client.py  test_demo_merchant_security.py  test_e2e_payment_refund_webhook.py  test_expiration_service.py  test_internal_auth_core.py  test_internal_auth_routes.py  test_internal_user_routes.py  test_merchant_api_auth_routes.py  test_merchant_ops_routes.py  test_merchant_ops_service.py  test_merchant_portal_analytics.py  test_merchant_portal_auth_routes.py  test_merchant_portal_routes.py  test_merchant_portal_schema_contract.py  test_merchant_portal_user_ops_service.py  test_merchant_readiness.py  test_ops_dashboard_routes.py  test_ops_merchant_portal_user_routes.py  test_payment_routes.py  (+20 more)
(+373 files in other folders)
