[project]
name = "mini-payment-gateway-backend"
version = "0.1.0"
description = "Database-first FastAPI backend scaffold for the mini payment gateway."
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
